--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -518,7 +518,7 @@
         <a href="#/k/hakemukset/{{tyyppi}}"><span class='glyphicon glyphicon-circle-arrow-left'></span>Palaa hakemusten
           suunnittelunäkymään</a>
       </div>
-      <div ng-show="sallittu('paatos-suunnittelu')" class=" col-md-6">
+      <div ng-show="sallittu('kasittely-hakemus')" class=" col-md-6">
         <div ng-show="(hakemus.hakemustilatunnus == 'V')">
           <button data-ng-click="tarkastaHakemus()" class="pull-right btn btn-success">Merkitse tarkastetuksi
           </button>
@@ -532,4 +532,3 @@
     </div>
   </div>
 </div>
-
