--- a/app/views/kasittelija/paatosEsikatselu.html
+++ b/app/views/kasittelija/paatosEsikatselu.html
@@ -1,82 +1,87 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-2">
-      <p>Esikatselutila</p>
-    </div>
-    <div class="col-md-10">
-      <a href="#/k/paatos/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}/{{hakemusid}}/{{haettuavustus}}/{{avustus}}" class="btn btn-primary">Palaa
-        päätökseen</a>
-    </div>
+  <div ng-hide="sallittu('kasittely-hakemus')">
+    <p>Ei hakemuksen käsittelyoikeutta.</p>
   </div>
-  <div class="row">
-    <div class="col-md-6">
-      <img src="logo.png"/>
+  <div ng-show="sallittu('kasittely-hakemus')">
+    <div class="row">
+      <div class="col-md-2">
+        <p>Esikatselutila</p>
+      </div>
+      <div class="col-md-10">
+        <a href="#/k/paatos/{{vuosi}}/{{tyyppi}}/{{lajitunnus}}/{{hakemusid}}/{{haettuavustus}}/{{avustus}}"
+           class="btn btn-primary">Palaa
+          päätökseen</a>
+      </div>
     </div>
-    <div class="col-md-3">
-      <h5>Päätös</h5>
+    <div class="row">
+      <div class="col-md-6">
+        <img src="logo.png"/>
+      </div>
+      <div class="col-md-3">
+        <h5>Päätös</h5>
 
-      <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
-    </div>
-    <div class="col-md-3">
-      <br>
+        <p>{{aikaleima | date:'dd.MM.yyyy'}}</p>
+      </div>
+      <div class="col-md-3">
+        <br>
 
-      <p>1234/020/2015</p>
+        <p>1234/020/2015</p>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <p>Hakemus 1234/123/{{hakemusid}}/{{vuosi}}</p>
+    <div class="row">
+      <div class="col-md-12">
+        <p>Hakemus 1234/123/{{hakemusid}}/{{vuosi}}</p>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <h2>Valtionavustuspäätös</h2>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Valtionavustuspäätös</h2>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2">
-      <p>Hakemus</p>
+    <div class="row">
+      <div class="col-md-2">
+        <p>Hakemus</p>
+      </div>
+      <div class="col-md-10">
+        <p><b>{{hakija}}</b> hakee vuonna <b>{{avustushakemus.vuosi}}</b> suurten kaupunkiseutujen joukkoliikenteen
+          valtionavustusta <b>{{haettuavustus| currency:"&euro;"}}.</b></p>
+      </div>
     </div>
-    <div class="col-md-10">
-      <p><b>{{hakija}}</b> hakee vuonna <b>{{avustushakemus.vuosi}}</b> suurten kaupunkiseutujen joukkoliikenteen
-        valtionavustusta <b>{{haettuavustus| currency:"&euro;"}}.</b></p>
+    <div class="row">
+      <div class="col-md-2">
+        <p>Päätös</p>
+      </div>
+      <div class="col-md-10">
+        <p>Liikennevirasto on hakemuksen perusteella päättänyt myöntää hakijalle <b>{{hakija}}</b> valtionavustuksena
+          <b>{{avustus| currency:"&euro;"}}</b>.</p>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2">
-      <p>Päätös</p>
-    </div>
-    <div class="col-md-10">
-      <p>Liikennevirasto on hakemuksen perusteella päättänyt myöntää hakijalle <b>{{hakija}}</b> valtionavustuksena
-        <b>{{avustus| currency:"&euro;"}}</b>.</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-10">
-      <br>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-10">
+        <br>
 
-      <p>Päätösteksti:</p>
+        <p>Päätösteksti:</p>
 
-      <p><b>{{paatos.selite}}</b></p>
-      <br>
-      <br>
-      <br>
+        <p><b>{{paatos.selite}}</b></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-2"></div>
-    <div class="col-md-4">
-      <p>Tiina Tuumala</p>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
+        <p>Tiina Tuumala</p>
 
-      <p>ylijohtaja</p>
-    </div>
-    <div class="col-md-6">
-      <p>Jenni Eskola</p>
+        <p>ylijohtaja</p>
+      </div>
+      <div class="col-md-6">
+        <p>Jenni Eskola</p>
 
-      <p>yksikön päällikkö</p>
+        <p>yksikön päällikkö</p>
+      </div>
     </div>
   </div>
 </div>
-
