Oikeusnimet vastaamaan tietokantamuutoksia

--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <div ng-hide="sallittu('view-omat-hakemukset')">
+  <div ng-hide="sallittu('view-oma-hakemus')">
     <p>Ei omien hakemusten katseluoikeutta.</p>
   </div>
-  <div ng-show="sallittu('view-omat-hakemukset')">
+  <div ng-show="sallittu('view-oma-hakemus')">
     <div class="row">
       <div class="col-md-2">
         <p>Esikatselutila</p>
